Fixed some issues with video alignment.

--- a/public/room_styles.css
+++ b/public/room_styles.css
@@ -17,6 +17,7 @@ span {
 
 .searchbar-input::placeholder{
     font-size: 48px;
+    vertical-align: middle;
 }
 
 .video-login-button{
